# bazel_include_repro

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  smoke.sh
repo_a/: .bazelrc  WORKSPACE.bazel
repo_a/lib/: BUILD.bazel  repo_a.cc  repo_a.h  repo_test.cc
repo_b/: WORKSPACE.bazel
repo_b/lib/: BUILD.bazel  repo_b.cc  repo_b.h  repo_test.cc
repo_c/: WORKSPACE.bazel
repo_c/lib/: BUILD.bazel  repo_c.cc  repo_c.h  repo_test.cc
